# Vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Makefile  README.md  cmake_install.cmake  compiler
ActiveContour/: CMakeLists.txt  compiler
ActiveContour/include/: openADA.hpp
ActiveContour/include/core/: gradient.hpp  snake.hpp
ActiveContour/src/: activeContour.cpp
GaborBars/: CMakeLists.txt  compiler
GaborBars/src/: gaborFunction.cpp  workspace.cpp
GaborLibs/: CMakeLists.txt  compiler
GaborLibs/include/: Ada.hpp  openADA.hpp
GaborLibs/src/: GaborLibs.cpp
RegistrationGabor/: CMakeLists.txt  compiler
RegistrationGabor/src/: registrationGabor.cpp
RelaxationLabelling/: CMakeLists.txt  compiler
RelaxationLabelling/include/: openAda.hpp
RelaxationLabelling/include/core/: probability.hpp
RelaxationLabelling/src/: relaxationLabelling.cpp
SobelOperator/: CMakeLists.txt  README.md  compiler
include/: .adaVision.hpp.swo  adaVision.hpp
libs/: adaGabor.hpp  adaVision.hpp
src/: .workspace.cpp.swp  gaborFunction.cpp  workspace.cpp
