cmake_minimum_required(VERSION 2.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
include_directories(include "./include" "./src")
project( GaborBars )
find_package( OpenCV REQUIRED HINTS "/usr/local/Cellar/opencv3/3.2.0/share/OpenCV")
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
add_executable(${PROJECT_NAME} ./src/gaborFunction.cpp)
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
